--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.15.0"
   },
   "devDependencies": {
